fix layout issues Changes to be committed: 	renamed:    material/mmitte/mmitte_content_logo_summery.svg -> material/mmitte/mmitte_content_logo_summary.svg 	modified:   mmitte.html 	modified:   style/mmitte.css

--- a/style/mmitte.css
+++ b/style/mmitte.css
@@ -451,62 +451,81 @@ h3 {
     color: #ACD2ED;
 }
 
-.content-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.content-grid-container {
+.content-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    overflow: hidden;
+    grid-template-rows: 2.5fr 1fr 1fr 1.5fr 1.5fr 0.5fr;
 }
 
-.content-grid-full-width {
+.content-section img{
+    display: block;
+    width: 100%;
+}
+
+.content-container-hero {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-end: 2;
 }
 
-.content-grid-half-width {
+.content-container-logo{
     grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
     grid-row-end: 3;
 }
 
-.content-container img, .content-grid-container img {
-    width: 100%;
-    height: auto;
+.content-container-busstop-1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
-.content-container .content-half-width {
-    flex: 0 0 50%;
-    background-color: white;
-    overflow: hidden;
-}
-
-#aspect-ratio-10601 {
-    aspect-ratio: 1.0601/1;
-}
-
-#aspect-ratio-14155 {
-    aspect-ratio: 1/1.4155;
-}
-
-#aspect-ratio-11776 {
-    aspect-ratio: 1/1.1776;
-}
-
-.project-description{
+.content-container-project-description-1{
     background-color: white;
     color: #FF2E00;
     font-size: 1.333rem;
-    overflow: hidden;
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+
+.content-container-typo-colors{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+.content-container-logo-summary{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+.content-container-posterwall{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 5;
+    grid-row-end: 7;
+}
+
+.content-container-project-description-2{
+    background-color: white;
+    color: #FF2E00;
+    font-size: 1.333rem;
+    padding: 1rem;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    grid-row-end: 6;
+}
+
+.content-section div{
+    overflow: hidden;
 }
